--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Akshat Fitness</title>
   </head>
-  <link
-    href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
 
   <body>
