--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
     <div class="container">
       <h1>Join the best gym of Indore now</h1>
       <form action="noaction.php">
-        <div class="form-group">
+        <div class="form-group row">
           <input type="text" name="" placeholder="Enter your Name" />
         </div>
-        <div class="form-group">
+        <div class="form-group row">
           <input type="text" name="" placeholder="Enter your Age" />
         </div>
-        <div class="form-group">
+        <div class="form-group row">
           <input type="text" name="" placeholder="Enter your Gender" />
         </div>
-        <div class="form-group">
+        <div class="form-group row">
           <input type="text" name="" placeholder="Enter your Locality" />
         </div>
-        <div class="form-group">
+        <div class="form-group row">
           <input type="text" name="" placeholder="Enter your Email Id" />
         </div>
-        <div class="form-group">
+        <div class="form-group row">
           <input type="text" name="" placeholder="Enter your Phone Number" />
         </div>
         <button class="btn">Submit</button>
