styled brand name

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Left box for logo -->
       <div class="left">
         <img src="img/dumbbell.png" alt="" />
-        <div>Akshat Fitness</div>
+        <div>Fitness Freaks</div>
       </div>
       <!-- Mid box for navbar -->
       <div class="mid">
